--- a/css/style.css
+++ b/css/style.css
@@ -229,14 +229,22 @@ h1 {
 	position: relative;
 	border: 1px solid black;
 	overflow: hidden;
-	
+	float: left;
+}
+.clear {
+	clear: both;
+}
+#instructions {
+	width: 100px;
+	float: left;
+	margin-left: 5em;
 }
 .tile.selected {
 	z-index: 9999;
 	opacity: 1;
 }
 .tile {
-	opacity: .8;
+	opacity: .85;
 }
 
 
