--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ h1 {
 	border: 1px solid black;
 	overflow: hidden;
 	float: left;
-	background: url(../img/playfield.jpg) center center no-repeat;
+	background: url(../img/playfield.png) center center no-repeat;
 }
 .clear {
 	clear: both;
@@ -243,9 +243,6 @@ h1 {
 .tile.selected {
 	z-index: 9999;
 	opacity: 1;
-}
-.tile.selected:hover {
-	background: url(../img/flip.png) no-repeat center center;
 }
 .tile {
 	opacity: .85;
