--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,13 @@ h1 {
 .shadow {
 	margin-top: 8px;
 }
+#splash {
+	height: 100%;
+	width: 100%;
+	background: url(../img/splash.jpg) no-repeat center center;
+	cursor: pointer;
+	z-index: 9998;
+}
 
 
 
